--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
-  "name": "coin-counter",
-  "version": "0.1.0",
+  "name": "bs-counter",
+  "version": "1.0.0",
+  "description": "Configurable and simple counter. Intended use for video game to count lives, deaths, points, coins, etc.",
+  "keywords": ["counter", "video game", "number"],
+  "homepage": "https://github.com/RodrigoRoy/bs-counter",
+  "bugs": {
+    "url": "https://github.com/RodrigoRoy/bs-counter/issues",
+    "email": "rodrigo.cln@ciencias.unam.mx"
+  },
+  "licence": "MIT",
+  "author": {
+    "name": "Rodrigo Colín",
+    "email": "rodrigo.cln@ciencias.unam.mx"
+  },
+  "repository": "github:RodrigoRoy/bs-counter",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "electron-window-state": "^5.0.3",
+    "vue": "^2.6.14",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,9 +37,16 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^6.1.12",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
