--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-counter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Configurable and simple counter. Intended use for video game to count lives, deaths, points, coins, etc.",
   "keywords": [
     "counter",
@@ -32,6 +32,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "dotenv": "^16.0.2",
+    "electron-updater": "^5.2.1",
     "electron-window-state": "^5.0.3",
     "vue": "^2.6.14",
     "vuetify": "^2.6.0"
